[package]
name = "mp3-art-tagger"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.14.0"
id3 = "1.16.4"
regex = "1.12.3"
reqwest = {version = "0.13.2", features = ["blocking", "json"]}
rfd = "0.17.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
urlencoding = "2.1.3"
walkdir = "2.5.0"
